# Anagram-Detector

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  README.md  pyproject.toml  requirements.txt
Schema/: README.md  config.schema.json  index.schema.json  input.schema.json  result.schema.json  test-case.schema.json
src/anagram_detector/: __init__.py  __main__.py  cache.py  cli.py  colors.py  config.py  engine.py  errors.py  formatters.py  models.py  normalization.py  repositories.py  signatures.py
tests/: test_cli.py  test_engine.py  test_normalization.py  test_properties.py  test_signatures.py
